# ACRE

./: .gitignore  CHANGELOG.md  CITATION.cff  Concept_Evaluation_V1.0.md  Idea 2 F-LACA Formalized Concepts.md  LICENSE  Problem_structure_v1.rtf  README.md  pyproject.toml  repomix-output.md  requirements.txt  test_core.py
configs/: scan_h100.yaml
data/concept_library/: seed_concepts.json
docs/: architecture.md  comparison_matrix.md  compile_pdf.py  mathematical_foundations.md  scientific_paper.tex  simulation_results.md  training_methodology.md
results/benchmarks/: cogs_results.json  constraint_results.json  scan_results.json
scripts/: decode_composed_concept.py  distill_concepts.py  download_training_data.sh  inspect_composed_concept.py  interactive_reasoning_demo.py  runpod_setup.sh  train_decoders_recipe.py  validate_composition.py  validate_program_synthesis.py  validate_safe_trajectory.py  validate_safety.py  validate_self_learning.py  validate_theorem_proving.py  visualize_learning_progress.py
src/acre/: __init__.py
src/acre/core/: __init__.py  algebra.py  concept_embedding.py  concept_encoder.py  concept_tensor.py  constraint_mask.py  decoder.py  flow_matching_decoder.py  lare.py  latent_rag.py  problem_tensor.py  solution_tensor.py
src/acre/evaluation/: __init__.py  c2e_metric.py  cogs_benchmark.py  compression_analysis.py  constraint_satisfaction_benchmark.py  embedding_evaluation.py  scan_benchmark.py
src/acre/simulations/: __init__.py  compression_demo.py  concept_algebra_demo.py  constraint_satisfaction_demo.py  convergence_analysis.py  flop_complexity_proof.py
src/acre/training/: __init__.py  algebraic_pretraining.py  concept_distillation.py  contrastive_pretraining.py  curriculum.py  self_learning.py  train.py
tests/: __init__.py  test_algebra.py  test_cogs_benchmark.py  test_concept_tensor.py  test_constraint_benchmark.py  test_embedding.py  test_flow_matching_decoder.py  test_lare.py  test_latent_rag.py  test_problem_tensor.py
